# agent-transport

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json
.cargo/: config.toml
.claude/skills/bump-version/: skill.md
.github/workflows/: build-node.yml  build-python.yml  publish-node.yml  publish-python.yml  test.yml
crates/agent-endpoint/: Cargo.toml
crates/agent-endpoint-node/: Cargo.toml  index.js  package-lock.json  package.json
crates/agent-endpoint-node/src/: lib.rs
crates/agent-endpoint-python/: Cargo.toml  pyproject.toml
crates/agent-endpoint-python/src/: lib.rs
crates/agent-endpoint/examples/: call_and_record.rs  cli_phone.rs  full_test.rs  inbound_echo.rs  outbound_call.rs  register.rs
crates/agent-endpoint/src/: audio.rs  call.rs  callbacks.rs  config.rs  dtmf.rs  endpoint.rs  error.rs  events.rs  lib.rs  media_port.rs
crates/agent-endpoint/src/beep/: config.rs  detector.rs  goertzel.rs  mod.rs
crates/agent-endpoint/tests/: integration.rs  smoke.rs
crates/agent-transport/: Cargo.toml  build.rs
crates/agent-transport-node/: .gitignore  .npmignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.livekit.json
crates/agent-transport-node/adapters/livekit/: agent-transport.d.ts  agent_server.ts  audio_stream_context.ts  audio_stream_server.ts  index.ts
crates/agent-transport-node/npm/darwin-arm64/: README.md  package.json
crates/agent-transport-node/npm/darwin-x64/: README.md  package.json
crates/agent-transport-node/npm/linux-arm64-gnu/: README.md  package.json
crates/agent-transport-node/npm/linux-x64-gnu/: README.md  package.json
crates/agent-transport-node/npm/win32-arm64-msvc/: package.json
crates/agent-transport-node/npm/win32-x64-msvc/: package.json
crates/agent-transport-node/src/: lib.rs
crates/agent-transport-python/: Cargo.toml  pyproject.toml
crates/agent-transport-python/adapters/agent_transport/audio_stream/: __init__.py
crates/agent-transport-python/adapters/agent_transport/audio_stream/pipecat/: mixers.py
crates/agent-transport-python/adapters/agent_transport/audio_stream/pipecat/serializers/: __init__.py
crates/agent-transport-python/adapters/agent_transport/audio_stream/pipecat/transports/: websocket.py
crates/agent-transport-python/adapters/agent_transport/sip/: __init__.py
crates/agent-transport-python/adapters/agent_transport/sip/livekit/: __init__.py  _aio_utils.py  _audio_source.py  _room_facade.py  audio_stream_io.py  audio_stream_server.py  server.py
crates/agent-transport-python/adapters/agent_transport/sip/pipecat/: __init__.py  sip_transport.py
crates/agent-transport-python/adapters/agent_transport/sip/pipecat/transports/: sip.py
crates/agent-transport-python/src/: lib.rs
crates/agent-transport/examples/: call_and_record.rs  full_test.rs  inbound_echo.rs  outbound_call.rs
crates/agent-transport/src/: audio.rs  config.rs  endpoint.rs  error.rs  events.rs  lib.rs  recorder.rs  rtp_transport.rs  sdp.rs
crates/agent-transport/src/audio_stream/: config.rs  endpoint.rs  mod.rs  plivo.rs  protocol.rs
crates/agent-transport/src/sip/: audio_buffer.rs  call.rs  dtmf.rs  endpoint.rs  mod.rs  resampler.rs  rtp_transport.rs  sdp.rs
crates/agent-transport/tests/: audio_stream.rs  smoke.rs
crates/pjsua-sys/: Cargo.toml  build.rs  wrapper.h
crates/pjsua-sys/src/: lib.rs
crates/rsipstack/: Cargo.toml
crates/rsipstack/examples/: proxy.rs
crates/rsipstack/examples/client/: main.rs  stun.rs
crates/rsipstack/src/dialog/: authenticate.rs  registration.rs
crates/rsipstack/src/transport/: connection.rs  stream.rs  (+1 more)
docs/: compile.md  livekit_interface_audio_stream.md  livekit_interface_sip.md  local-development.md  pipecat_interface_audio_stream.md  pipecat_interface_sip.md
examples/: cli_phone.py  livekit_audio_stream_agent.py  livekit_sip_agent.py  pipecat_audio_stream_agent.py  pipecat_sip_agent.py
examples/cli/: cli_phone.js  cli_phone.py  cli_phone_advanced.py  headless_phone.py  phone.py  phone_advanced.py
examples/livekit/: audio_stream_agent.py  audio_stream_agent.ts  audio_stream_multi_agent.py  audio_stream_multi_agent.ts  livekit_audio_stream_agent.py  livekit_sip_agent.py  sip_agent.py  sip_agent.ts  sip_multi_agent.py  sip_multi_agent.ts
examples/pipecat/: audio_stream_agent.py  audio_stream_multi_agent.py  audio_stream_voicemail_agent.py  pipecat_audio_stream_agent.py  pipecat_sip_agent.py  sip_agent.py  sip_multi_agent.py  sip_voicemail_agent.py
node/adapters/: livekit.ts
node/agent-transport-livekit/: package-lock.json  package.json
node/agent-transport-livekit/src/: agent-transport.d.ts  agent_server.ts  audio_stream_server.ts  livekit_adapters.ts  observability.ts  session_context.ts  sip_audio_input.ts
node/agent-transport-sip-livekit/: package-lock.json  package.json
node/agent-transport-sip-livekit/src/: agent-transport.d.ts  agent_server.ts  audio_stream_context.ts  audio_stream_server.ts  call_context.ts  index.ts  livekit-agents-io.d.ts  livekit_adapters.ts  sip_audio_input.ts  sip_audio_output.ts
python/: pyproject.toml
python/agent_transport/: __init__.py
python/agent_transport/audio_stream/livekit/: __init__.py
python/agent_transport/audio_stream/pipecat/: __init__.py  audio_stream_server.py  audio_stream_transport.py  mixers.py  processors.py
python/agent_transport/audio_stream/pipecat/serializers/: plivo.py
python/agent_transport/audio_stream/pipecat/transports/: __init__.py  websocket.py
python/agent_transport/sip/livekit/: __init__.py  _audio_source.py  _room_facade.py  audio_stream_io.py  audio_stream_server.py  observability.py  server.py  sip_io.py
python/agent_transport/sip/pipecat/: __init__.py  audio_stream_transport.py  mixers.py  processors.py  sip_transport.py
python/agent_transport/sip/pipecat/transports/: __init__.py  sip.py
python/agent_transport_adapters/livekit/: __init__.py  _audio_source.py  _channel.py  audio_stream_io.py  sip_io.py
python/agent_transport_adapters/pipecat/: audio_stream_transport.py  sip_transport.py
(+1 files in other folders)
