[package]
name = "agent-transport-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for agent-transport (SIP UA)"

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_transport_core = { path = "../agent-transport", package = "agent-transport", features = ["audio-stream"] }
crossbeam-channel.workspace = true
napi = { version = "2", features = ["default", "napi9"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
