[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent-transport"
version = "0.1.3"
description = "SIP and audio streaming transport for AI voice agents (pure Rust)"
readme = "../../README.md"
requires-python = ">=3.9"
license = "MIT"

[tool.maturin]
features = []

[tool.maturin.environment]
# CMake 4.x removed compatibility with cmake_minimum_required < 3.5.
# The bundled opus source (audiopus_sys) uses an older version spec.
CMAKE_POLICY_VERSION_MINIMUM = "3.5"
