[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent-transport"
version = "0.1.9"
description = "SIP and audio streaming transport for AI voice agents (pure Rust)"
readme = "../../README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
livekit = ["aiohttp", "livekit-agents>=1.5"]
pipecat = ["pipecat-ai>=0.0.108"]
all = ["agent-transport[livekit,pipecat]"]

[tool.maturin]
features = []
python-source = "adapters"
python-packages = ["agent_transport"]

[tool.maturin.environment]
# CMake 4.x removed compatibility with cmake_minimum_required < 3.5.
# The bundled opus source (audiopus_sys) uses an older version spec.
CMAKE_POLICY_VERSION_MINIMUM = "3.5"
