[package]
name = "agent-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIP transport for AI agents — pure Rust (rsipstack + rtc-rtp)"

[dependencies]
beep-detector.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true

rsipstack = "0.4"
rsip = "0.4"
rtc-rtp = "0.9"
rtc-shared = "0.9"
bytes = "1"
rand = "0.9"
tokio-util = { version = "0.7", features = ["rt"] }

[features]
integration = []

[dev-dependencies]
tracing-subscriber = "0.3"
anyhow.workspace = true
crossbeam-channel.workspace = true

[[example]]
name = "register"

[[example]]
name = "outbound_call"

[[example]]
name = "full_test"

[[example]]
name = "call_and_record"

[[example]]
name = "inbound_echo"
