[package]
name = "agent-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIP transport for AI agents — pure Rust"

[dependencies]
beep-detector.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true

# SIP signaling
rsipstack = "0.4"
rsip = "0.4"

# RTP (webrtc-rs established crate)
rtp = "0.17"
webrtc-util = { version = "0.17", features = ["marshal"] }

# G.711 codec (mu-law / A-law)
audio-codec-algorithms = "0.7"

# Utilities
bytes = "1"
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

[features]
integration = []

[dev-dependencies]
tracing-subscriber = "0.3"
anyhow.workspace = true
crossbeam-channel.workspace = true

[[example]]
name = "register"

[[example]]
name = "outbound_call"

[[example]]
name = "full_test"

[[example]]
name = "call_and_record"

[[example]]
name = "inbound_echo"
