[package]
name = "agent-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIP transport for AI agents — pure Rust"

[dependencies]
beep-detector.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true

# SIP signaling (local fork with lr=on fix for ACK routing)
rsipstack = { path = "../rsipstack" }
rsip = "0.4"

# RTP (webrtc-rs established crate)
rtp = "0.17"
webrtc-util = { version = "0.17", features = ["marshal"] }

# G.711 codec (mu-law / A-law)
audio-codec-algorithms = "0.7"

# Utilities
bytes = "1"
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# Optional audio processing
neteq = { version = "0.8", default-features = false, optional = true }

# Optional audio streaming (Plivo WebSocket)
tokio-tungstenite = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
futures-util = { version = "0.3", optional = true }

[features]
integration = []
jitter-buffer = ["neteq"]
plc = []
comfort-noise = []
audio-processing = ["jitter-buffer", "plc", "comfort-noise"]
audio-stream = ["tokio-tungstenite", "serde", "serde_json", "base64", "reqwest", "futures-util"]

[build-dependencies]
cc = "1"

[dev-dependencies]
tracing-subscriber = "0.3"
anyhow.workspace = true
crossbeam-channel.workspace = true
audio-codec-algorithms = "0.7"
base64 = "0.22"
serde_json = "1"

[[example]]
name = "register"

[[example]]
name = "outbound_call"

[[example]]
name = "full_test"

[[example]]
name = "call_and_record"

[[example]]
name = "inbound_echo"
